# assistant-demo-scripts

./: .gitignore  AGENTS.md  README.md  main_chunker.py  main_cleaner.py  pyproject.toml  requirements-dev.txt  requirements.txt
chunkers/: pipeline.py
cleaners/: __init__.py  base.py  html.py  pdf.py  placeholders.py
configs/: embedding.json  llm_config.json  postgres.json
data/: api.md  embedding-api.md
data/clean/: 产品说明书_OG-5308_20251020.txt
data/raw/: 产品测评_OG-8598Plus_20251020.html
docs/: PRD.md
embedders/: __init__.py  qwen_client.py
kanban/: board.md
kanban/task/: T1-1-setup-cleaning-framework.md  T1-2-2-improve-pdf-cleaner-chunk-readiness.md  T1-2-implement-pdf-cleaner.md  T1-3-1-implement-html-cleaner.md  T1-3-2-improve-html-cleaner-markdown.md  T1-3-3-improve-html-cleaner-markdown.md  T1-3-implement-html-cleaner.md  T1-4-implement-markdown-cleaner.md  T1-5-process-embedded-images.md  T2-1-implement-recursive-text-splitter.md  T2-2-implement-semantic-splitter.md  T2-3-build-chunking-pipeline.md  T2-4-implement-small-chunk-merger.md  T2-5-integrate-chunker-into-ingest-script.md  T3-1-implement-embedding-client.md  T4-1-implement-db-writer.md  T4-2-build-embedding-and-load-pipeline.md  T5-1-project-structure-refactor.md  (+1 more)
loaders/: __init__.py  main_loader.py
samples/: dummy.html  dummy.md
storages/: __init__.py  postgres_writer.py
tests/: conftest.py  test_chunker.py  test_db_writer.py  test_embedding_client.py  test_html_cleaner.py  test_integration.py  test_loader.py  test_pdf_cleaner.py  test_splitters.py
tools/: __init__.py  ingest.py
(+48 files in other folders)
